--- a/Web/Lab1/Portfolio/css/about.css
+++ b/Web/Lab1/Portfolio/css/about.css
@@ -1,10 +1,13 @@
 .photo-wrapper {
-    display: inline-block;
-    width: 30%;
-    margin: 1.5%;
-    padding: 0px;
+    display: flex;
+    width: 100%;
+    flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 .photo-wrapper > img {
-    width: 100%;
+    display: block;
+    max-width: 450px;
+    flex: 2 2 auto;
+    margin-bottom: 50px;
 }
