--- a/Web/Lab1/Portfolio/css/shared.css
+++ b/Web/Lab1/Portfolio/css/shared.css
@@ -33,7 +33,7 @@ footer > section {
 }
 
 p {
-    text-align: justify;
+	text-align: justify;
 }
 
 header > * {
@@ -46,6 +46,29 @@ h1 {
 
 h2 {
     font-size: 32px;
+}
+
+.contents {
+	display: block;
+	color: black;
+	text-decoration: none;
+}
+
+.photo-wrapper {
+    display: flex;
+    width: 100%;
+    flex-flow: row wrap;
+	justify-content: space-between;
+	align-items: baseline;
+	align-content: flex-start; 
+}
+
+.photo-wrapper > img {
+    display: block;
+	max-width: 150px;
+	height: auto;
+	flex: 2 2 auto;
+	margin: 10px;
 }
 
 .form-container {
