--- a/Web/Lab1/Portfolio/css/shared.css
+++ b/Web/Lab1/Portfolio/css/shared.css
@@ -56,17 +56,16 @@ h2 {
 
 .photo-wrapper {
     display: flex;
-    width: 100%;
-    flex-flow: row wrap;
-	justify-content: space-between;
-	align-items: baseline;
-	align-content: flex-start; 
+	width: 100%;
+	height: 1800px;
+    flex-flow: column wrap;
+	align-content: flex-start;
+	justify-content: baseline;
 }
 
 .photo-wrapper > img {
     display: block;
-	max-width: 150px;
-	height: auto;
+	max-width: 300px;
 	flex: 2 2 auto;
 	margin: 10px;
 }
