--- a/Web/Lab1/Portfolio/css/shared.css
+++ b/Web/Lab1/Portfolio/css/shared.css
@@ -57,14 +57,12 @@ h2 {
 .photo-wrapper {
     display: flex;
 	width: 100%;
-	height: 1800px;
     flex-flow: column wrap;
 	align-content: flex-start;
 	justify-content: baseline;
 }
 
 .photo-wrapper > img {
-    display: block;
 	max-width: 300px;
 	flex: 2 2 auto;
 	margin: 10px;
@@ -76,12 +74,14 @@ h2 {
     padding: 20px 12px 10px 20px;
     font-weight: 100;
 }
+
 .form-container li {
 	padding: 0;
 	display: block;
 	list-style: none;
 	margin: 10px 0 0 0;
 }
+
 .form-container label {
 	margin:0 0 3px 0;
 	padding:0px;
@@ -93,35 +93,19 @@ h2 {
     display: inline-block;
 }
 
-.form-container input[type=text], 
-.form-container input[type=date],
-.form-container input[type=datetime],
-.form-container input[type=number],
-.form-container input[type=search],
-.form-container input[type=time],
-.form-container input[type=url],
-.form-container input[type=email],
-textarea, 
-select {
+.form-container input, textarea, select {
 	box-sizing: border-box;
 	border:1px solid #BEBEBE;
 	padding: 7px;
 	margin:0px;
 	outline: none;	
 }
-.form-container input[type=text]:focus, 
-.form-container input[type=date]:focus,
-.form-container input[type=datetime]:focus,
-.form-container input[type=number]:focus,
-.form-container input[type=search]:focus,
-.form-container input[type=time]:focus,
-.form-container input[type=url]:focus,
-.form-container input[type=email]:focus,
-.form-container textarea:focus, 
-.form-container select:focus {
+
+.form-container input:focus {
 	box-shadow: 0 0 8px #88D5E9;
 	border: 1px solid #88D5E9;
 }
+
 .form-container .field-divided {
 	width: 49%;
 }
@@ -129,9 +113,11 @@ select {
 .form-container .field-long {
 	width: 100%;
 }
+
 .form-container .field-select {
 	width: 100%;
 }
+
 .form-container .field-textarea {
 	height: 100px;
 }
