--- a/Web/Portfolio/src/css/shared.css
+++ b/Web/Portfolio/src/css/shared.css
@@ -173,3 +173,39 @@ td {
 .validation-failed {
     box-shadow: 0 0 8px red;
 }
+
+.modal {
+    display: block;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-picture {
+    display: block;
+    max-width: 80%;
+    max-height: 80%;
+    margin: 0px auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.modal-close {
+    position: fixed;
+    top: 5%;
+    right: 5%;
+    font-size: 60px;
+    line-height: 40px;
+    color: white;
+    cursor: pointer;
+}
+
+.modal-close:hover {
+    text-shadow: 0 0 10px white;
+}
