Add page for adding printed editons

--- a/.Net/Lab3/PrintedEditionSdiApp/Views/PrintedEditionControl.xaml
+++ b/.Net/Lab3/PrintedEditionSdiApp/Views/PrintedEditionControl.xaml
@@ -23,7 +23,7 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <Button Margin="5">Add</Button>
+            <Button Click="AddPrintedEditionButtonClick" Margin="5">Add</Button>
         </StackPanel>
         
         <StackPanel DataContext="{Binding SelectedPrintedEdition}" Margin="5">
