--- a/.Net/Lab3/PrintedEditionSdiApp/Views/PrintedEditionControl.xaml
+++ b/.Net/Lab3/PrintedEditionSdiApp/Views/PrintedEditionControl.xaml
@@ -11,18 +11,35 @@
     <StackPanel>
         <StackPanel>
             <Label HorizontalAlignment="Center">Printed Editions</Label>
-            <ListBox ItemsSource="{Binding PrintedEditions}" SelectedItem="{Binding SelectedPrintedEdition}"
-                     MinHeight="220" Margin="5">
-                <ListBox.ItemTemplate>
+            <ListView ItemsSource="{Binding PrintedEditions}" SelectedItem="{Binding SelectedPrintedEdition}"
+                      ScrollViewer.VerticalScrollBarVisibility="Visible"
+                      Height="250" Margin="5">
+                <ListView.Resources>
+                    <Style TargetType="ListViewItem">
+                        <Style.Triggers>
+                            <Trigger Property="IsKeyboardFocusWithin" Value="True">
+                                <Setter Property="IsSelected" Value="True"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.Resources>
+                <ListView.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Margin="5">
-                            <TextBlock Text="{Binding Path=Name}" />
-                            <TextBlock Text="{Binding Path=Author}" />
-                            <TextBlock Text="{Binding Path=Price}" />
-                        </StackPanel>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="290"/>
+                                <ColumnDefinition Width="50"/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0" Margin="5">
+                                <TextBlock Text="{Binding Name}" />
+                                <TextBlock Text="{Binding Author}" />
+                                <TextBlock Text="{Binding Price}" />
+                            </StackPanel>
+                            <Button Name="EditButton" Grid.Column="1" Click="EditPrintedEditionButtonClick" Margin="5" Content="Edit"/>
+                        </Grid>
                     </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+                </ListView.ItemTemplate>
+            </ListView>
             <Button Click="AddPrintedEditionButtonClick" Margin="5">Add</Button>
         </StackPanel>
         
