--- a/Web/Portfolio/src/photos/photos.css
+++ b/Web/Portfolio/src/photos/photos.css
@@ -1,4 +1,4 @@
-.modal {
+.lightbox {
     display: block;
     position: fixed;
     z-index: 1;
@@ -10,7 +10,7 @@
     background-color: rgba(0,0,0,0.4);
 }
 
-.modal-picture {
+.lightbox-picture {
     display: block;
     max-width: 80%;
     max-height: 80%;
@@ -20,7 +20,7 @@
     transform: translateY(-50%);
 }
 
-.modal-close {
+.lightbox-close {
     position: fixed;
     top: 5%;
     right: 5%;
@@ -30,6 +30,6 @@
     cursor: pointer;
 }
 
-.modal-close:hover {
+.lightbox-close:hover {
     text-shadow: 0 0 10px white;
 }
