--- a/.Net/Lab3/PrintedEditionSdiApp/Views/AddPrintedEditionWindow.xaml
+++ b/.Net/Lab3/PrintedEditionSdiApp/Views/AddPrintedEditionWindow.xaml
@@ -1,15 +1,16 @@
-<Window x:Class="PrintedEditionSdiApp.Views.PrintedEditionEditFormWindow"
+﻿<Window x:Class="PrintedEditionSdiApp.Views.AddPrintedEditionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:viewModels="clr-namespace:PrintedEditionSdiApp.ViewModels"
         mc:Ignorable="d"
-        Title="PrintedEditionEditFormWindow" Width="400" Height="210"
-        d:DataContext="{d:DesignInstance viewModels:PrintedEditionViewModel}">
-        
+        Title="PrintedEditionMainWindow"
+        Width="400" Height="210"
+        d:DataContext="{d:DesignInstance viewModels:AddPrintedEditionViewModel}">
+    
     <StackPanel>
-        <StackPanel DataContext="{Binding SelectedPrintedEdition}" Margin="5">
+        <StackPanel DataContext="{Binding PrintedEditionToAdd}" Margin="5">
             <Label HorizontalAlignment="Center">Enter printed edition details</Label>
             <TextBlock Text="Name" />
             <TextBox Text="{Binding Name}" />
@@ -18,6 +19,7 @@
             <TextBlock Text="Price" />
             <TextBox Text="{Binding Price}" />
         </StackPanel>
-        <Button Margin="5">Edit</Button>
+        <Button Command="{Binding AddPrintedEditionCommand}" Click="AddButtonClick" Margin="5" Content="Add">
+        </Button>
     </StackPanel>
 </Window>
