--- a/.Net/Lab3/PrintedEditionSdiApp/Views/EditPrintedEditionWindow.xaml
+++ b/.Net/Lab3/PrintedEditionSdiApp/Views/EditPrintedEditionWindow.xaml
@@ -1,17 +1,15 @@
-﻿<Window x:Class="PrintedEditionSdiApp.Views.PrintedEditionAddFormWindow"
+<Window x:Class="PrintedEditionSdiApp.Views.EditPrintedEditionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:viewModels="clr-namespace:PrintedEditionSdiApp.ViewModels"
         mc:Ignorable="d"
-        Title="PrintedEditionMainWindow"
-        Width="400" Height="210"
-        d:DataContext="{d:DesignInstance viewModels:PrintedEditionViewModel}"
-        Name="AddWindow">
-    
+        Title="PrintedEditionEditFormWindow" Width="400" Height="210"
+        d:DataContext="{d:DesignInstance viewModels:EditPrintedEditionViewModel}">
+        
     <StackPanel>
-        <StackPanel DataContext="{Binding NewPrintedEditionInfo}" Margin="5">
+        <StackPanel DataContext="{Binding PrintedEditionToEdit}" Margin="5">
             <Label HorizontalAlignment="Center">Enter printed edition details</Label>
             <TextBlock Text="Name" />
             <TextBox Text="{Binding Name}" />
@@ -20,7 +18,6 @@
             <TextBlock Text="Price" />
             <TextBox Text="{Binding Price}" />
         </StackPanel>
-        <Button Command="{Binding AddCommand}" Margin="5" Content="Add">
-        </Button>
+        <Button Command="{Binding EditPrintedEdition}" Click="EditButtonClick" Margin="5">Edit</Button>
     </StackPanel>
 </Window>
