--- a/.Net/Lab3/PrintedEditionSdiApp/Views/PrintedEditionControl.xaml
+++ b/.Net/Lab3/PrintedEditionSdiApp/Views/PrintedEditionControl.xaml
@@ -14,12 +14,22 @@
             <ListView ItemsSource="{Binding PrintedEditions}" SelectedItem="{Binding SelectedPrintedEdition}"
                       ScrollViewer.VerticalScrollBarVisibility="Visible"
                       Height="250" Margin="5">
+                <ListView.Resources>
+                    <Style TargetType="ListViewItem">
+                        <Style.Triggers>
+                            <Trigger Property="IsKeyboardFocusWithin" Value="True">
+                                <Setter Property="IsSelected" Value="True"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.Resources>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="290"/>
-                                <ColumnDefinition Width="50"/>
+                                <ColumnDefinition Width="240"/>
+                                <ColumnDefinition Width="50" />
+                                <ColumnDefinition Width="50" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Margin="5">
                                 <TextBlock Text="{Binding Name}" />
@@ -28,6 +38,11 @@
                             </StackPanel>
                             <Button Name="EditButton" Grid.Column="1" Click="EditPrintedEditionButtonClick"
                                     Margin="5" Content="Edit"/>
+                            <Button Grid.Column="2"
+                                    Command="{Binding Path=DataContext.DeleteCommand,
+                                              RelativeSource={RelativeSource FindAncestor,
+                                              AncestorType={x:Type Page}}}"
+                                    Margin="5" Content="Delete"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
