--- a/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/MainWindow.xaml
+++ b/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/MainWindow.xaml
@@ -4,8 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:PrintedEditionMdi.Views"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        mc:Ignorable="d">
 
-    <views:PrintedEditionControl/>
+<views:PrintedEditionControl/>
 </Window>
