--- a/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/PrintedEditionControl.xaml
+++ b/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/PrintedEditionControl.xaml
@@ -6,17 +6,24 @@
       xmlns:viewModels="clr-namespace:PrintedEditionMdi.ViewModels"
       mc:Ignorable="d"
       d:DataContext="{d:DesignInstance viewModels:PrintedEditionControlViewModel}"
-      Title="PrintedEditionControl"
-      MinHeight="450" MinWidth="400">
+      Title="PrintedEditionControl">
 
     <DataGrid HorizontalAlignment="Left"
-              ItemsSource="{Binding Path=PrintedEditions}"
+              ItemsSource="{Binding PrintedEditions}"
+              SelectedItem="{Binding SelectedItem}"
               AutoGenerateColumns="False">
         <DataGrid.Columns>
-            <DataGridTextColumn Binding="{Binding Path=Id}" Width="0.33*" Header="Id" />
-            <DataGridTextColumn Binding="{Binding Path=Name}" Width="0.33*" Header="Name" />
-            <DataGridTextColumn Binding="{Binding Path=Author}" Width="0.33*" Header="Author" />
-            <DataGridTextColumn Binding="{Binding Path=Price}" Width="0.33*" Header="Price" />
+            <DataGridTextColumn Binding="{Binding Id}" Width="0.1*" Header="Id" />
+            <DataGridTextColumn Binding="{Binding Name}" Width="0.2*" Header="Name" />
+            <DataGridTextColumn Binding="{Binding Author}" Width="0.2*" Header="Author" />
+            <DataGridTextColumn Binding="{Binding Price}" Width="0.2*" Header="Price" />
+            <DataGridTemplateColumn Width="0.1*">
+                <DataGridTemplateColumn.CellTemplate>
+                    <DataTemplate>
+                        <Button Content="Delete" Command="{Binding RemoveCommand}"></Button>
+                    </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+            </DataGridTemplateColumn>
         </DataGrid.Columns>
     </DataGrid>
 </Page>
