--- a/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/PrintedEditionControl.xaml
+++ b/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/PrintedEditionControl.xaml
@@ -1,4 +1,5 @@
-﻿<Page x:Class="PrintedEditionMdi.Views.PrintedEditionControl"
+﻿<Page Name="PrintedEditionControlPage"
+      x:Class="PrintedEditionMdi.Views.PrintedEditionControl"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,22 +9,23 @@
       d:DataContext="{d:DesignInstance viewModels:PrintedEditionControlViewModel}"
       Title="PrintedEditionControl">
 
-    <DataGrid HorizontalAlignment="Left"
-              ItemsSource="{Binding PrintedEditions}"
-              SelectedItem="{Binding SelectedItem}"
-              AutoGenerateColumns="False">
-        <DataGrid.Columns>
-            <DataGridTextColumn Binding="{Binding Id}" Width="0.1*" Header="Id" />
-            <DataGridTextColumn Binding="{Binding Name}" Width="0.2*" Header="Name" />
-            <DataGridTextColumn Binding="{Binding Author}" Width="0.2*" Header="Author" />
-            <DataGridTextColumn Binding="{Binding Price}" Width="0.2*" Header="Price" />
-            <DataGridTemplateColumn Width="0.1*">
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <Button Content="Delete" Command="{Binding RemoveCommand}"></Button>
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-        </DataGrid.Columns>
-    </DataGrid>
+    <StackPanel>
+        <DataGrid HorizontalAlignment="Left"
+                  ItemsSource="{Binding PrintedEditions}"
+                  SelectedItem="{Binding SelectedItem}"
+                  AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Name}" Width="0.2*" Header="Name" />
+                <DataGridTextColumn Binding="{Binding Author}" Width="0.2*" Header="Author" />
+                <DataGridTextColumn Binding="{Binding Price}" Width="0.2*" Header="Price" />
+                <DataGridTemplateColumn Width="0.1*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Command="{Binding Path=DataContext.RemoveCommand, ElementName=PrintedEditionControlPage}">Delete</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+    </StackPanel>
 </Page>
