--- a/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/App.xaml
+++ b/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/App.xaml
@@ -1,5 +1,6 @@
 ﻿<Application x:Class="PrintedEditionMdi.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/MainWindow.xaml"
+             DispatcherUnhandledException="App_OnDispatcherUnhandledException">
 </Application>
