--- a/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/PrintedEditionControl.xaml
+++ b/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/PrintedEditionControl.xaml
@@ -16,18 +16,30 @@
                 <MenuItem Header="Save As" Click="SaveAsButtonClick"></MenuItem>
             </MenuItem>
         </Menu>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.8*" />
+                <ColumnDefinition Width="0.2*" />
+            </Grid.ColumnDefinitions>
+            <TextBox Name="Filter" FlowDirection="RightToLeft" Margin="5" Grid.Column="0"></TextBox>
+            <Button Margin="5" Grid.Column="1" Click="FilterButtonClick">Search</Button>
+        </Grid>
         <DataGrid HorizontalAlignment="Left"
                   ItemsSource="{Binding PrintedEditions}"
                   SelectedItem="{Binding SelectedItem}"
-                  AutoGenerateColumns="False">
+                  AutoGenerateColumns="False"
+                  IsTextSearchEnabled="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Name}" Width="0.2*" Header="Name" />
                 <DataGridTextColumn Binding="{Binding Author}" Width="0.2*" Header="Author" />
                 <DataGridTextColumn Binding="{Binding Price}" Width="0.2*" Header="Price" />
+                <DataGridTextColumn Binding="{Binding CreatedAt, StringFormat='d'}" IsReadOnly="True"
+                                    Width="0.2*" Header="Created at" />
                 <DataGridTemplateColumn Width="0.1*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Command="{Binding Path=DataContext.RemoveCommand, ElementName=PrintedEditionControlPage}">Delete</Button>
+                            <Button Command="{Binding Path=DataContext.RemoveCommand,
+                                                      ElementName=PrintedEditionControlPage}">Delete</Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
