Set page width in view

--- a/.Net/Lab4/Notepad/Views/NotepadControl.xaml
+++ b/.Net/Lab4/Notepad/Views/NotepadControl.xaml
@@ -17,7 +17,10 @@
                 <MenuItem Header="Save As" Click="SaveAs" />
             </MenuItem>
         </Menu>
-        <xceedWpfToolkit:RichTextBox Name="RichTextBox" Text="{Binding FileContent, Delay=2000, UpdateSourceTrigger=PropertyChanged}" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+        <xceedWpfToolkit:RichTextBox Name="RichTextBox"
+                                     Text="{Binding FileContent, Delay=2000, UpdateSourceTrigger=PropertyChanged}"
+                                     ScrollViewer.HorizontalScrollBarVisibility="Auto">
+            <FlowDocument PageWidth="3000" />
             <xceedWpfToolkit:RichTextBox.TextFormatter>
                 <xceedWpfToolkit:PlainTextFormatter />
             </xceedWpfToolkit:RichTextBox.TextFormatter>
