--- a/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/PrintedEditionControl.xaml
+++ b/.Net/Lab4/PrintedEditionMdi/PrintedEditionMdi/Views/PrintedEditionControl.xaml
@@ -32,7 +32,8 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Command="{Binding Path=DataContext.RemoveCommand,
-                                                      ElementName=PrintedEditionControlPage}">Delete</Button>
+                                    ElementName=PrintedEditionControlPage}">Delete
+                            </Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
