--- a/Web/Portfolio/src/lightbox/lightbox.css
+++ b/Web/Portfolio/src/lightbox/lightbox.css
@@ -1,35 +1,59 @@
-.lightbox {
-    display: block;
+#lightbox {
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
+    display: none;
 }
 
-.lightbox-picture {
-    display: block;
-    max-width: 80%;
-    max-height: 80%;
-    margin: 0px auto;
-    position: relative;
+.lightbox-content {
+    position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 80%;
 }
 
-.lightbox-close {
-    position: fixed;
-    top: 5%;
-    right: 5%;
+.image-wrapper {
+    display: flex;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.image-wrapper img {
+    max-width: 100%;
+    max-height: 100%;
+    flex: none;
+}
+
+.lightbox-button {
     font-size: 60px;
     line-height: 40px;
     color: white;
     cursor: pointer;
 }
 
-.lightbox-close:hover {
+.lightbox-close {
+    position: fixed;
+    top: 5%;
+    right: 5%;
+}
+
+.lightbox-close:hover, .lightbox-arrow:hover {
     text-shadow: 0 0 10px white;
+}
+
+.lightbox-arrow-left {
+    float: left;
+}
+
+.lightbox-arrow-right {
+    float: right;
+}
+
+.no-scroll {
+    overflow: hidden;
 }
