Fix learning page connected bundle

--- a/Web/Portfolio/haml/learning.haml
+++ b/Web/Portfolio/haml/learning.haml
@@ -2,7 +2,7 @@
   %head
     %title M university disciplines page
     = render("./partials/head-shared.haml")
-    %script{ src: "../js/index.js" }
+    %script{ src: "../js/learning.js" }
   %body
     = render("./partials/nav.haml")
     = render("./partials/portrait.haml")
