--- a/Web/Portfolio/haml/index.haml
+++ b/Web/Portfolio/haml/index.haml
@@ -1,10 +1,10 @@
 %html
   %head
     %title Homepage
-    = render("./partials/head-shared.haml")
+    = render(File.join(__dir__, "/partials/head-shared.haml"))
   %body
-    = render("./partials/nav.haml")
-    = render("./partials/portrait.haml")
+    = render(File.join(__dir__, "/partials/nav.haml"))
+    = render(File.join(__dir__, "/partials/portrait.haml"))
     %div.main-content
       %header
         %h1 Портфолио
@@ -24,5 +24,5 @@
           %h2 Следующая глава
         %p
           = nonsense_paragraph()
-    = render("./partials/footer.haml")
+    = render(File.join(__dir__, "/partials/footer.haml"))
     %script{ src: "../js/index.js" }
