--- a/Web/Portfolio/haml/learning.haml
+++ b/Web/Portfolio/haml/learning.haml
@@ -1,10 +1,10 @@
 %html
   %head
     %title M university disciplines page
-    = render("./partials/head-shared.haml")
+    = render(File.join(__dir__, "/partials/head-shared.haml"))
   %body
-    = render("./partials/nav.haml")
-    = render("./partials/portrait.haml")
+    = render(File.join(__dir__, "/partials/nav.haml"))
+    = render(File.join(__dir__, "/partials/portrait.haml"))
     %div.main-content
       %section
         %header
@@ -54,5 +54,5 @@
             %td Теория баз данных
             %td ТСПП
             %td ОС
-    = render("./partials/footer.haml")
+    = render(File.join(__dir__, "/partials/footer.haml"))
     %script{ src: "../js/learning.js" }
