--- a/Web/Portfolio/haml/partials/portrait.haml
+++ b/Web/Portfolio/haml/partials/portrait.haml
@@ -1,1 +1,1 @@
-%img{ src: "../images/portrait.jpg", class: "portrait", alt: "Portrait picture in on the back. Don't mind id" }
+%img{ src: "../images/portrait.jpg", class: "portrait", alt: "Portrait picture in on the back. Don't mind it" }
