--- a/Web/Portfolio/src/scss/shared.scss
+++ b/Web/Portfolio/src/scss/shared.scss
@@ -1,3 +1,5 @@
+$defaultBorderRadius: 4px;
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -14,7 +16,7 @@ body {
         margin: 0 auto;
         padding: 50px 100px;
         background-color: white;
-        border-radius: 4px;
+        border-radius: $defaultBorderRadius;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         overflow: hidden;
 
@@ -93,4 +95,18 @@ h2 {
 
 .validation-failed {
     box-shadow: 0 0 8px red;
+}
+
+button {
+    font-size: 20px;
+    border: none;
+    margin: 0 10px;
+    width: 100px;
+    height: 40px;
+    border-radius: $defaultBorderRadius;
+    background-color: lightgrey;
+
+    &:hover {
+        background-color: darken(lightgrey, 20%);
+    }
 }
