--- a/Web/Portfolio/haml/photos.haml
+++ b/Web/Portfolio/haml/photos.haml
@@ -14,8 +14,8 @@
     %div#lightbox
       %div.lightbox-content
         %div.image-wrapper
-          %img.lightbox-picture{ src: "file:///D:/Learning/Web/Portfolio/images/lion-king.jpg" }
-        %div.lightbox-navigation
+          %img{ src: "file:///D:/Learning/Web/Portfolio/images/lion-king.jpg" }
+        %div
           %div.lightbox-button.lightbox-arrow-left &lt;
           %div.lightbox-button.lightbox-arrow-right &gt;
       %div.lightbox-button.lightbox-close ×
