--- a/Web/Portfolio/src/datepicker/datepicker.scss
+++ b/Web/Portfolio/src/datepicker/datepicker.scss
@@ -2,24 +2,24 @@
     display: block;
     width: 100%;
     margin-top: 10px;
-    padding: 5px 0px;
+    padding: 5px 0;
     border-radius: 4px;
     background-color: #dddddd;
 
     .element-wrapper {
         width: 100%;
-        margin: 10px 0px;
+        margin: 10px 0;
 
         #datepicker-year, #datepicker-month {
             display: inline-block;
             width: 40%;
-            margin: 0px 5%;
+            margin: 0 5%;
         }
 
         #datepicker-date-list {
             width: 90%;
             list-style: none;
-            padding-left: 0px;
+            padding-left: 0;
             margin-left: 5%;
             margin-right: 5%;
             display: flex;
@@ -29,7 +29,7 @@
                 flex: 0 1 20%;
                 text-align: center;
                 justify-content: left;
-                margin: 0px;
+                margin: 0;
                 height: 40px;
                 line-height: 40px;
 
