Implement interests page in CoffeeScript

--- a/Web/Portfolio/haml/interests.haml
+++ b/Web/Portfolio/haml/interests.haml
@@ -2,7 +2,7 @@
   %head
     %title My interests
     = render(File.join(__dir__, "/partials/head-shared.haml"))
-    %script{ src: "../js/interests.js" }
+    %script{ src: "../js/interestsCoffee.js" }
   %body
     = render(File.join(__dir__, "/partials/nav.haml"))
     = render(File.join(__dir__, "/partials/portrait.haml"))
