Implement photos page in CoffeeScript

--- a/Web/Portfolio/haml/photos.haml
+++ b/Web/Portfolio/haml/photos.haml
@@ -2,7 +2,7 @@
   %head
     %title Photo album page
     = render(File.join(__dir__, "/partials/head-shared.haml"))
-    %script{ src: "../js/photos.js" }
+    %script{ src: "../js/photosCoffee.js" }
   %body
     = render(File.join(__dir__, "/partials/nav.haml"))
     = render(File.join(__dir__, "/partials/portrait.haml"))
