Implement contact page in CoffeeScript

--- a/Web/Portfolio/haml/contact.haml
+++ b/Web/Portfolio/haml/contact.haml
@@ -2,7 +2,7 @@
   %head
     %title Contact me
     = render(File.join(__dir__, "/partials/head-shared.haml"))
-    %script{ src: "../js/contact.js" }
+    %script{ src: "../js/contactCoffee.js" }
   %body
     = render(File.join(__dir__, "/partials/nav.haml"))
     = render(File.join(__dir__, "/partials/portrait.haml"))
