--- a/Web/Portfolio/haml/test.haml
+++ b/Web/Portfolio/haml/test.haml
@@ -2,7 +2,7 @@
   %head
     %title Test page
     = render(File.join(__dir__, "/partials/head-shared.haml"))
-    %script{ src: "../js/test.js" }
+    %script{ src: "../js/testCoffee.js" }
   %body
     = render(File.join(__dir__, "/partials/nav.haml"))
     = render(File.join(__dir__, "/partials/portrait.haml"))
