--- a/Web/Portfolio/src/scss/forms.scss
+++ b/Web/Portfolio/src/scss/forms.scss
@@ -21,17 +21,17 @@ form {
                 padding: 5px;
             }
 
+            .error-messages {
+                color: $invalidInputColor;
+                margin-bottom: 5px;
+            }
+
             %form-item {
                 border: solid 1px #dedede;
                 border-radius: $defaultBorderRadius;
                 outline: none;
                 margin: $elementMargin 0;
                 padding: 5px;
-
-                &.error-messages {
-                    color: $invalidInputColor;
-                    margin-bottom: 5px;
-                }
 
                 &:focus {
                     box-shadow: 0 0 0 2px #308DE0;
