Add min-height property to a layout

--- a/Web/Portfolio/app/client-side/src/shared/layout/layout.scss
+++ b/Web/Portfolio/app/client-side/src/shared/layout/layout.scss
@@ -19,6 +19,7 @@ body {
         border-radius: $defaultBorderRadius;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         overflow: hidden;
+        min-height: 500px;
 
         .avatar {
             width: 30%;
